try to avoid gui stuff in tox

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,11 @@ requires =
 
 isolated_build = true
 
+setenv =
+    ETS_TOOLKIT=
+    QT_API=
+    MPLBACKEND=agg
+
 
 [testenv]
 
@@ -63,8 +68,8 @@ deps =
     numpy120: numpy>=1.20,<1.21
 
 # Need to install this to prevent traits errors
-extras =
-    pyqt
+# extras =
+#     pyqt
 
 commands =
     python -V
