--- a/tox.ini
+++ b/tox.ini
@@ -8,11 +8,11 @@ filterwarnings =
 
 
 # Make translations from gh-actions versioning tags to tox versioning tags
-;[gh-actions]
-;python =
-;    3.7: py37
-;    3.8: py38
-;    3.9: py39
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
 
 # Version constraints...
 # There is some segmentation fault going on with HDF5 & Python 3.6 -- skip py36 for now
