integrate github actions for various status badges (#1)
* try actions on the github remote

* no pytest marks

* Update README.md

* try to avoid gui stuff in tox

* run tox verbose

* doh

* simple action trigger

--- a/tox.ini
+++ b/tox.ini
@@ -8,11 +8,11 @@ filterwarnings =
 
 
 # Make translations from gh-actions versioning tags to tox versioning tags
-;[gh-actions]
-;python =
-;    3.7: py37
-;    3.8: py38
-;    3.9: py39
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
 
 # Version constraints...
 # There is some segmentation fault going on with HDF5 & Python 3.6 -- skip py36 for now
@@ -29,6 +29,11 @@ requires =
     pip
 
 isolated_build = true
+
+setenv =
+    ETS_TOOLKIT=
+    QT_API=
+    MPLBACKEND=agg
 
 
 [testenv]
@@ -63,8 +68,8 @@ deps =
     numpy120: numpy>=1.20,<1.21
 
 # Need to install this to prevent traits errors
-extras =
-    pyqt
+# extras =
+#     pyqt
 
 commands =
     python -V
